# SLAKSHNA-FL

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark.py  benchmark_multiple.py  benchmark_results_final.csv  config.toml  config_iiitd11dya80c33rgle72vkffj0sllkk3rv4z4vdrcmtm.yaml  config_iiitd11m6v5neyjd0r4ufq9k2kz9v3mxhgsnnx9kwj2rq.yaml  config_iiitd11mt0862nk7j4rqhry9dsypeayhvrg58fsxcqv89.yaml  config_iiitd11qvwvqlqxdn4ajxyjtvscc845uysd0r45a0hvuc.yaml  config_iiitd11r3a78xvujwsur3w4kvgfvqumth9xs5ah0p5ezu.yaml  config_iiitd11x8cfthw0zjq44sx52k8yt3mfzxuvhjja5ggyr9.yaml  config_iiitd11xmthp05t4qn8ug9qmv4ykyjh6yv08qeea3j4p9.yaml  deploy.sh  diag.py  docker-compose.yml  ml_engine.py  ml_performance_plot.py  node2.toml  node3.toml  node4.toml  node5.toml  node_template.yaml  orchestrator.py  plot_honest_accuracy.py  plot_latency_throughput.py  plot_malicious_sweep.py  run_latency_sweep.py  run_ml_sweep.py  setup.sh  test_addr.rs  test_api.sh  test_iroh.rs  test_parse.rs  test_shield_debug.py  test_shield_trace.py
Bhaskera/: .gitignore  ARCHITECTURE.md  README.md  bhaskera-activate.sh  pyproject.toml  requirements.txt  setup.sh
Bhaskera/configs/: README.md  gemma.yaml  openbiollm.yaml  param_vllm.yaml  qwen.yaml  serve_test.yaml
Bhaskera/scripts/: submit.sh
Bhaskera/src/bhaskera/: config.py  gateway.py  introspect.py
Bhaskera/src/bhaskera/data/: README.md  __init__.py  registry.py  tokenize.py
Bhaskera/src/bhaskera/data/datasets/: __init__.py  local_chat.py  openassistant.py  redpajama.py  ultrachat.py
Bhaskera/src/bhaskera/distributed/: README.md  __init__.py  activation_ckpt.py  checkpoint.py  ddp.py  fsdp.py  wrap.py
Bhaskera/src/bhaskera/inference/: Inference.md  __init__.py  engine.py  kv_cache.py  lloyd_max.py  param2.py  sampling.py  speculative.py  vllm_turboquant.py
Bhaskera/src/bhaskera/launcher/: README.md  dashboard.py  diagnostics.py  infer.py  monitoring.py  serve.py  tokenize.py  train.py  worker.py
Bhaskera/src/bhaskera/models/: README.md  __init__.py  loader.py  lora.py  quantization.py
Bhaskera/src/bhaskera/serve/: README.md  __init__.py  app.py  deployment.py  engine.py  schemas.py
Bhaskera/src/bhaskera/trainer/: README.md  __init__.py  checkpointing.py  loop.py  moe.py  optim.py  precision.py
Bhaskera/src/bhaskera/utils/: README.md  __init__.py  gpu_stats.py  system_stats.py  throughput.py
benchmark_configs/: node-0.toml  (+3 more)
(+40 files in other folders)
