[package]
name = "iiitd-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["MANant Jain"]
description = "IIITD Virtual Machine - A blockchain with IIITD-20 token standard"

[[bin]]
name = "iiitd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
rayon = "1.10.0"
# Web server + WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
bech32 = "0.11"
rand_chacha = "0.3"
# Database
rocksdb = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
tokio-tungstenite = "0.21"
url = "2.4"

libp2p = { version = "0.53", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "tcp",
    "quic",
    "upnp",
    "noise",
    "yamux",
    "macros",
] }

# ZKP Shield Dependencies
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs"] }
