[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhaskera"
version = "2.2.0"
description = "Bhaskera LLM Training and Serving Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0"
]

[project.optional-dependencies]
serve = [
    "ray[serve]>=2.10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.5.0"
]
vllm = [
    "vllm>=0.4.3"
]
gateway = [
    "langfuse>=2.0.0",
    "openai>=1.0.0"
]
all = [
    "ray[serve]>=2.10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.5.0",
    "vllm>=0.4.3",
    "langfuse>=2.0.0",
    "openai>=1.0.0"
]

[project.scripts]
bhaskera-serve = "bhaskera.launcher.serve:main"
